--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Simple repo to store "What is paper prototyping and why you should use it when building websites" assets</title>
+    <title>Simple repo to store "What is paper prototyping and why you should use it when building any website." assets</title>
   </head>
 
   <body>
 
-    <h1>Simple repo to store "What is paper prototyping and why you need to use it when building websites" assets</h1>
+    <h1>Simple repo to store "What is paper prototyping and why you should use it when building any website." assets</h1>
 
-    <!-- <a href="https://youtu.be/VD9Vr3f2roM" target="blank">Link to "What is paper prototyping and why you need to use it when building websites"</a>-->
+    <!-- <a href="https://youtu.be/nmeEE72EolI" target="blank">Link to "What is paper prototyping and why you should use it when building any website."</a>-->
 
     <video width="400" controls>
       <source src="finishedvideo.mp4" type="video/mp4">
